--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -44,7 +44,7 @@
                     android:id="@+id/rv_developers"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@android:color/darker_gray"
+                    android:background="@color/yellow"
                     android:padding="10dp"
                     android:scrollbarSize="5dp"
                     android:scrollbars="vertical">
