--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,12 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
         <item name="colorAccent">@color/colorAccent</item>
 
+        <!-- change color of options menu -->
+        <item name="android:itemBackground">@color/newPokedexColor</item>
+        <item name="android:textColor">@color/light</item>
+
+
+
         <!-- TEST -->
 
 
