--- a/app/src/main/res/values/nums.xml
+++ b/app/src/main/res/values/nums.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <integer name="max_pokemons"> 150 </integer>
+
+    <integer name="num_national_pokemons">700</integer>
 </resources>
