--- a/app/src/main/res/layout/activity_full.xml
+++ b/app/src/main/res/layout/activity_full.xml
@@ -9,52 +9,32 @@
     android:id="@+id/fullLayout">
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/scrollLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#00B8D4">
 
-        <LinearLayout
-            android:gravity="center"
-            android:layout_gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_margin="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/image_view"
-                android:layout_width="200dp"
-                android:layout_height="200dp"
-                android:src="@mipmap/ic_launcher" />
-
-            <TextView
-                android:id="@+id/text_view_id"
+            <androidx.cardview.widget.CardView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Id"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                android:layout_gravity="center"
+                android:layout_margin="8dp"
+                app:cardCornerRadius="20dp"
+                android:gravity="center"
+                android:orientation="vertical"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent">
 
-            <TextView
-                android:id="@+id/text_view_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Name"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
+                <ImageView
+                    android:id="@+id/image_view"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/ic_launcher" />
 
-            <TextView
-                android:id="@+id/text_view_sprite"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Sprite"
-                android:textColor="@android:color/black"
-                android:textSize="20sp" />
-
-        </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
     </androidx.core.widget.NestedScrollView>
 
