--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        android:padding="16dp"
+        android:gravity="center">
 
         <ImageView
             android:id="@+id/image_view"
@@ -19,25 +20,26 @@
             android:layout_height="200dp"
             android:src="@mipmap/ic_launcher" />
 
-        <TextView
+        <!--<TextView
             android:id="@+id/text_view_id"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Id"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
-        <TextView
+            android:textSize="20sp" />-->
+        <!--<TextView
             android:id="@+id/text_view_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="20sp" />-->
         <TextView
             android:id="@+id/text_view_sprite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Sprite"
+            android:textAlignment="center"
             android:textColor="@android:color/black"
             android:textSize="20sp" />
 
