--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="green">#2ECC71</color>
     <color name="blue">#3498DB</color>
     <color name="pink">#F5B1CC</color>
+    <color name="lightBlue">#ABD1D0</color>
 
 
 </resources>
