--- a/app/src/main/res/drawable-land/splash_background.xml
+++ b/app/src/main/res/drawable-land/splash_background.xml
@@ -2,18 +2,15 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:top="0dp"
-        android:right="0dp"
-        android:left="0dp"
-        android:bottom="0dp"
+        android:top="@dimen/zero"
+        android:right="@dimen/zero"
+        android:left="@dimen/zero"
+        android:bottom="@dimen/zero"
         android:drawable="@drawable/splashscreen_horizontal" />
-    <!--<item android:drawable="@drawable/splashscreen_top"
-        android:gravity="top"/>
-    <item android:drawable="@drawable/splashscreen_bottom"
-        android:gravity="bottom"/>-->
+
     <item android:drawable="@drawable/splash_logo"
         android:gravity="center"
-        android:width="300dp"
-        android:height="100dp"/>
+        android:width="@dimen/ivFull"
+        android:height="@dimen/logoHeight"/>
 
 </layer-list>
