--- a/app/src/main/res/layout/gallery_item.xml
+++ b/app/src/main/res/layout/gallery_item.xml
@@ -3,46 +3,33 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
-    app:cardCornerRadius="8dp"
+    android:layout_margin="@dimen/margin"
+    app:cardCornerRadius="@dimen/margin"
     android:id="@+id/itemCard">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp"
+        android:padding="@dimen/padding"
         android:gravity="center">
 
         <ImageView
             android:id="@+id/image_view"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:src="@mipmap/ic_launcher" />
+            android:layout_height="@dimen/ivHeight"
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/gallery_photo" />
 
-        <!--<TextView
-            android:id="@+id/text_view_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Id"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />-->
-        <!--<TextView
-            android:id="@+id/text_view_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Name"
-            android:textColor="@android:color/black"
-            android:textSize="20sp" />-->
         <TextView
             android:id="@+id/text_view_sprite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Sprite"
+            android:text="@string/app_name"
             android:textAlignment="center"
+            android:fontFamily="@font/dosis_medium"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
-
+            android:textSize="@dimen/tvSize" />
 
     </LinearLayout>
 
