--- a/app/src/main/res/layout/cardview_pokemon_detail.xml
+++ b/app/src/main/res/layout/cardview_pokemon_detail.xml
@@ -3,7 +3,7 @@
     <androidx.cardview.widget.CardView android:elevation="20dp" app:cardElevation="20dp" app:cardCornerRadius="20dp" android:layout_marginTop="10dp" android:backgroundTint="@color/cardview_dark_background" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/cv_pokemon" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    -<androidx.constraintlayout.widget.ConstraintLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:id="@+id/cl_card">
@@ -17,7 +17,8 @@
         app:layout_constraintStart_toStartOf="parent"
         android:contentDescription="@string/iv_pkmn_detail"/>
 
-    <TextView android:layout_marginTop="20dp"
+    <TextView
+        android:layout_marginTop="20dp"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
         android:id="@+id/tv_pkmn_num"
@@ -42,7 +43,8 @@
         android:textColor="#ffff" android:text="#pkmn_name"
         android:fontFamily="sans-serif-medium"/>
 
-    <ImageView android:layout_marginTop="20dp"
+    <ImageView
+        android:layout_marginTop="20dp"
         android:layout_height="24dp"
         android:layout_width="63dp"
         android:id="@+id/iv_pkmn_type1"
