--- a/app/src/main/res/layout/cardview_pokemon_detail.xml
+++ b/app/src/main/res/layout/cardview_pokemon_detail.xml
@@ -1,76 +1,88 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-    <androidx.cardview.widget.CardView android:elevation="20dp" app:cardElevation="20dp" app:cardCornerRadius="20dp" android:layout_marginTop="10dp" android:backgroundTint="@color/cardview_dark_background" android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/cv_pokemon" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/cv_pokemon"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="10dp"
+    android:background="@drawable/item_selector"
+    android:backgroundTint="@color/cardview_dark_background"
+    android:elevation="20dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="20dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-    android:layout_height="wrap_content"
-    android:layout_width="match_parent"
-    android:id="@+id/cl_card">
-
-    <ImageView
-        android:layout_height="100dp"
-        android:layout_width="100dp"
-        android:id="@+id/iv_pkmn_icon"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        android:contentDescription="@string/iv_pkmn_detail"/>
-
-    <TextView
-        android:layout_marginTop="20dp"
+        android:id="@+id/cl_card"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/tv_pkmn_num"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/iv_pkmn_icon"
-        android:textStyle="bold"
-        android:textSize="14dp"
-        android:textColor="#ffff"
-        android:text="#pkmn_num"
-        android:fontFamily="sans-serif-medium"/>
+        android:background="@drawable/item_selector">
 
-    <TextView
-        android:layout_marginTop="20dp"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:id="@+id/tv_pkmn_name"
-        android:layout_marginStart="10dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/tv_pkmn_num"
-        android:textStyle="bold" android:textSize="14dp"
-        android:textColor="#ffff" android:text="#pkmn_name"
-        android:fontFamily="sans-serif-medium"/>
+        <ImageView
+            android:id="@+id/iv_pkmn_icon"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginStart="10dp"
+            android:contentDescription="@string/iv_pkmn_detail"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_marginTop="20dp"
-        android:layout_height="24dp"
-        android:layout_width="63dp"
-        android:id="@+id/iv_pkmn_type1"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num"
-        app:layout_constraintLeft_toRightOf="@id/iv_pkmn_icon"/>
+        <TextView
+            android:id="@+id/tv_pkmn_num"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="#pkmn_num"
+            android:textColor="#ffff"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/iv_pkmn_icon"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:layout_marginTop="20dp"
-        android:layout_height="24dp"
-        android:layout_width="63dp"
-        android:id="@+id/iv_pkmn_type2"
-        android:layout_marginStart="16dp"
-        app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num"
-        app:layout_constraintLeft_toRightOf="@id/iv_pkmn_type1"/>
+        <TextView
+            android:id="@+id/tv_pkmn_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="20dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="#pkmn_name"
+            android:textColor="#ffff"
+            android:textSize="14dp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@+id/tv_pkmn_num"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/iv_pkmn_status"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginRight="30dp"
-        />
+        <ImageView
+            android:id="@+id/iv_pkmn_type1"
+            android:layout_width="63dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintLeft_toRightOf="@id/iv_pkmn_icon"
+            app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_pkmn_type2"
+            android:layout_width="63dp"
+            android:layout_height="24dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintLeft_toRightOf="@id/iv_pkmn_type1"
+            app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num" />
+
+        <ImageView
+            android:id="@+id/iv_pkmn_status"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginRight="30dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
