--- a/app/src/main/res/layout/cardview_pokemon_detail.xml
+++ b/app/src/main/res/layout/cardview_pokemon_detail.xml
@@ -8,9 +8,9 @@
     android:layout_marginTop="10dp"
     android:background="@drawable/item_selector"
     android:backgroundTint="@color/cardview_dark_background"
-    android:elevation="20dp"
+    android:elevation="5dp"
     app:cardCornerRadius="20dp"
-    app:cardElevation="20dp">
+    app:cardElevation="5dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,10 +34,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/dosis_bold"
             android:text="#pkmn_num"
             android:textColor="#ffff"
-            android:textSize="14dp"
+            android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/iv_pkmn_icon"
             app:layout_constraintTop_toTopOf="parent" />
@@ -48,10 +48,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="20dp"
-            android:fontFamily="sans-serif-medium"
+            android:fontFamily="@font/dosis_bold"
             android:text="#pkmn_name"
             android:textColor="#ffff"
-            android:textSize="14dp"
+            android:textSize="16dp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/tv_pkmn_num"
             app:layout_constraintTop_toTopOf="parent" />
@@ -69,7 +69,7 @@
             android:id="@+id/iv_pkmn_type2"
             android:layout_width="63dp"
             android:layout_height="24dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="3dp"
             android:layout_marginTop="20dp"
             app:layout_constraintLeft_toRightOf="@id/iv_pkmn_type1"
             app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num" />
