--- a/app/src/main/res/layout/cardview_pokemon_detail.xml
+++ b/app/src/main/res/layout/cardview_pokemon_detail.xml
@@ -26,7 +26,8 @@
             android:layout_marginStart="10dp"
             android:contentDescription="@string/iv_pkmn_detail"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            />
 
         <TextView
             android:id="@+id/tv_pkmn_num"
@@ -63,7 +64,8 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             app:layout_constraintLeft_toRightOf="@id/iv_pkmn_icon"
-            app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num" />
+            app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num"
+            />
 
         <ImageView
             android:id="@+id/iv_pkmn_type2"
@@ -72,7 +74,8 @@
             android:layout_marginStart="3dp"
             android:layout_marginTop="20dp"
             app:layout_constraintLeft_toRightOf="@id/iv_pkmn_type1"
-            app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num" />
+            app:layout_constraintTop_toBottomOf="@id/tv_pkmn_num"
+            />
 
         <ImageView
             android:id="@+id/iv_pkmn_status"
