aggiustato il padding dell'activity about

--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -88,7 +88,10 @@
                 android:layout_height="wrap_content"
                 android:background="@color/yellow"
                 android:textAlignment="center"
-                android:textColor="@color/newPokedexColor" />
+                android:textColor="@color/newPokedexColor"
+                android:paddingBottom="@dimen/padding"
+                android:paddingLeft="@dimen/margin"
+                android:paddingRight="@dimen/margin" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
