--- a/app/src/main/res/layout/activity_favorites_pokemon.xml
+++ b/app/src/main/res/layout/activity_favorites_pokemon.xml
@@ -11,8 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:clipToPadding="false"
-        android:padding="10dp"
-        android:scrollbarSize="5dp"
+        android:padding="@dimen/padding_rv"
+        android:scrollbarSize="@dimen/scollbarSize_rv"
         android:scrollbarThumbVertical="@android:color/darker_gray"
         android:scrollbars="vertical"
         app:layout_constraintStart_toStartOf="parent"
