--- a/app/src/main/res/layout/item_about.xml
+++ b/app/src/main/res/layout/item_about.xml
@@ -8,8 +8,8 @@
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:backgroundTint="@color/newPokedexColor"
-    android:elevation="20dp"
-    app:cardCornerRadius="20dp">
+    android:elevation="@dimen/cardElevation_item"
+    app:cardCornerRadius="@dimen/cardCornerRadius_item">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/cl_item_about"
@@ -19,11 +19,11 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/iv_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="@dimen/width_ivAbout"
+            android:layout_height="@dimen/height_ivAbout"
             android:src="@android:drawable/ic_input_get"
             app:civ_border_color="@color/light"
-            app:civ_border_width="2dp"
+            app:civ_border_width="@dimen/civBorderWidth_ivAbout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,9 +31,9 @@
             android:id="@+id/tv_developer_general"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/marginStart_tv"
+            android:layout_marginTop="@dimen/marginTop_tvGen"
+            android:layout_marginEnd="@dimen/marginEnd_tv"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_image"
@@ -43,9 +43,9 @@
             android:id="@+id/tv_developer_mail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="14dp"
-            android:layout_marginEnd="8dp"
+            android:layout_marginStart="@dimen/marginStart_tv"
+            android:layout_marginTop="@dimen/marginTop_tvMail"
+            android:layout_marginEnd="@dimen/marginEnd_tv"
             android:textColor="@android:color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
