added corners to the tvs into item_about.xml

--- a/app/src/main/res/layout/item_about.xml
+++ b/app/src/main/res/layout/item_about.xml
@@ -34,7 +34,8 @@
             android:layout_marginStart="@dimen/marginStart_tv"
             android:layout_marginTop="@dimen/marginTop_tvGen"
             android:layout_marginEnd="@dimen/marginEnd_tv"
-            android:textColor="@android:color/white"
+            android:background="@drawable/rounded_corner"
+            android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/iv_image"
             app:layout_constraintTop_toTopOf="parent" />
@@ -46,7 +47,8 @@
             android:layout_marginStart="@dimen/marginStart_tv"
             android:layout_marginTop="@dimen/marginTop_tvMail"
             android:layout_marginEnd="@dimen/marginEnd_tv"
-            android:textColor="@android:color/white"
+            android:background="@drawable/rounded_corner"
+            android:textColor="@android:color/black"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/iv_image"
